result/0618-143812/stderr.log
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/features.c:331:6: error: redefinition of ‘color_invert’
  331 | void color_invert (char *source_path){
      |      ^~~~~~~~~~~~
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/features.c:256:6: note: previous definition of ‘color_invert’ with type ‘void(char *)’
  256 | void color_invert (char *source_path){
      |      ^~~~~~~~~~~~
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/main.c:101:1: error: expected declaration or statement at end of input
  101 | }
      | ^
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/features.c:357:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
  357 | void_mirror_total(char * source_path){
      | ^~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/features.c: In function ‘void_mirror_total’:
/home/runner/work/pgi-2025-the_cool_aspirations/pgi-2025-the_cool_aspirations/src/features.c:361:93: error: expected ‘)’ before ‘cher’
  361 |        unsigned char *data = (unsigned char*)malloc(width *height *channels *sizeof(unsigned cher));
      |                                                                                    ~        ^~~~~
      |                                                                                             )
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2